--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="page-navigation">
           <ul class="page-navigation-list">
             <li class="page-navigation-item">
-              <a class="page-navigation-link" href="#">Каталог товаров</a>
+              <a class="page-navigation-link" href="#">Каталог</a>
             </li>
             <li class="page-navigation-item">
               <a class="page-navigation-link" href="#">Доставка и оплата</a>
@@ -27,15 +27,15 @@
         <a class="phone" href=#">+7 800 555-86-28</a>
         <ul class="user-butons-list">
           <li class="user-butons-item">
-            <button class="user-buton-search" type="button">
+            <button class="user-buton user-buton-search" type="button">
               <span class="visually-hidden">Поиск.</span>
             </button>
           </li>
           <li class="user-butons-item">
-            <button class="user-buton-login" type="button">Вход</button>
+            <button class="user-buton user-buton-login" type="button">Вход</button>
           </li>
           <li class="user-butons-item">
-            <button class="user-buton-basket" type="button">
+            <button class="user-buton user-buton-basket" type="button">
               <span class="visually-hidden">Корзина.</span>
               2 товара
             </button>
