--- a/catalog.html
+++ b/catalog.html
@@ -68,10 +68,10 @@
             <div class="user-popup">
               <form class="user-login-form" action="https://echo.htmlacademy.ru" method="get">
                 <h2 class="user-popup-header">Личный кабинет</h2>
-                <label class="visually-hidden" for="login-email" required>Введите email.</label>
-                <input class="input" id="login-email" placeholder="email@example.com" type="email">
-                <label class="visually-hidden" for="login-password" required>Введите пароль.</label>
-                <input class="input" id="login-password" type="password">
+                <label class="visually-hidden" for="login-email">Введите email.</label>
+                <input class="input" id="login-email" placeholder="email@example.com" type="email" required>
+                <label class="visually-hidden" for="login-password">Введите пароль.</label>
+                <input class="input" id="login-password" type="password" required>
                 <div class="user-login-form-bottom">
                   <button class="button button-red" type="submit">Войти</button>
                   <ul class="user-login-link-list">
